feat: address PR comments